<resources>
    <string name="app_name" translatable="false">Agro~Search</string>

    <string name="appraisal">In partial fulfillment to the development of Cameroon by 2035</string>
    <string name="powered_by">IRAD CAMEROON</string>
    <string name="collaboration">TECH-GUYS</string>
    <string name="language">Language</string>

    <!--Shared Preferences configs-->
    <string name="lastUpdatePrefs" translatable="false">com.irad.cm.agri_tech_last_updates</string>
    <string name="lastUpdateTime" translatable="false"></string>
    <string name="lastHumidity" translatable="false"></string>
    <string name="lastPressure" translatable="false"></string>
    <string name="lastWind" translatable="false"></string>
    <string name="lastDescription" translatable="false"></string>
    <string name="lastTemperature" translatable="false"></string>
    <string name="lastLocation" translatable="false"></string>
    <string name="cropDetail_last_location" translatable="false"></string>

    <!--Dialog titles-->
    <string name="choose_language">Translate App</string>
    <string name="city_search">Search a City</string>

    <string name="test">Coming Soon...</string>

    <!--bottom nav menu-->
    <string name="home">Home</string>
    <string name="signup">Sign Up</string>
    <string name="locateMe">Locate Me</string>

    <!--home menu-->
    <string name="climate">Climate</string>
    <string name="diseases">Plants and diseases</string>
    <string name="innovations">Agriculture Innovations</string>
    <string name="marketPrice">Market Prices</string>
    <string name="animal">Animals</string>
    <string name="vegetale">Crops</string>

    <!--Connection status-->
    <string name="status_title">Alert!</string>
    <string name="status">Dear User,\n
        You are not online. Please connect to a network in order to get a better experience from this app...
    </string>

    <!--Weather activity header menu-->
    <string name="about">About</string>

    <!--Today Weather tags-->
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>

    <!--Tab Titles-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="other">Other</string>

    <!--Crops-->
    <string name="crops_title">Crops</string>
    <string name="crops_list">Crop List</string>
    <string name="annual_crops">Annual Crops</string>
    <string name="perennial_crops">Perennial Crops</string>
    <string name="fisheries">Animals and Fisheries</string>
    <string name="actions">Actions</string>
    <string name="filter">Filter</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>

    <!--Crop Detail-->
    <string name="crop_desc">About</string>
    <string name="crop_variety">Varieties</string>
    <string name="crop_disease">Diseases</string>
    <string name="crop_papers">Papers</string>
    <string name="favorable_zone">Favorable Zones</string>
    <string name="campaign_date">Campaign Dates</string>
    <string name="campaign_name">Campaign</string>
    <string name="campaign_regions">Regions</string>
    <string name="campaign_from">From</string>
    <string name="campaign_to">To</string>
    <string name="market_price">Market Price</string>
    <string name="market_region">Regions</string>
    <string name="market_price_measure">Price</string>
    <string name="technical_sheet">Technical Sheet</string>
    <string name="download">Download</string>
    <string name="adapted">Your area is fit for this crop</string>
    <string name="not_adapted">Your area is not fit for this crop</string>
    <string name="view_more">VIEW MORE...</string>
    <string name="variety_location">Location</string>
    <string name="variety_availability">Availability</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="seed_price">Price</string>
    <string name="yield">Yield</string>
    <string name="maturity">Maturity</string>
    <string name="particularity">Particularity</string>
    <string name="points_of_distribution">Points of Distribution</string>

    <!--Error Messages-->
    <string name="unspecified">Unspecified</string>

    <string name="permission_rationale" translatable="false">Please grant location permission to start the service</string>
    <string name="permission_denied_explanation" translatable="false">You have not granted location permission. So the service cannot be started.</string>
    <string name="settings" translatable="false">settings</string>
    <string name="title_alert_no_intenet" translatable="false">No internet</string>
    <string name="msg_alert_no_internet" translatable="false">Please make sure that you have active internet connection.</string>
    <string name="no_google_playservice_available" translatable="false">No Google Playservice found. Please install it.</string>
    <string name="msg_location_service_not_started" translatable="false">Location Tracking Not Started</string>
    <string name="msg_location_service_started" translatable="false">Location Tracking Started</string>
    <string name="btn_label_refresh" translatable="false">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="symptom">Symptom</string>
    <string name="solution">Solution</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="transition_string" translatable="false">hello</string>

    <!--Plants and Diseases-->
    <string name="module4">Plants &amp; Diseases</string>
    <string name="disease">Diseases</string>
    <string name="plant">Plants</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <!--Market Price-->
    <!--<>Market Price</>-->
</resources>
