<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".climate.WeatherActivity"
    android:id="@+id/activity_weather">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <include layout="@layout/collapse_toolbar" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/activeAppearance"
            app:tabIndicatorHeight="4dp"
            app:tabSelectedTextColor="#ffffff"
            app:tabTextColor="#C1DDC1">
            <android.support.design.widget.TabItem
                android:id="@+id/todayTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today" />
            <android.support.design.widget.TabItem
                android:id="@+id/tommorowTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow" />
            <android.support.design.widget.TabItem
                android:id="@+id/othersTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"></android.support.v4.view.ViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#46343434"
            app:menu="@menu/bottom_navigation" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>