<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".varietyDetail.VarietyDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <include layout="@layout/variety_detail_toolbar"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:padding="5dp">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill_horizontal"
                            android:id="@+id/other_variety_name"
                            android:text="Other Name"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:textSize="20dp"
                            android:layout_marginBottom="15dp"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:id="@+id/variety_image"
                            android:layout_gravity="fill_horizontal"
                            android:src="@drawable/mais895"
                            android:scaleType="fitXY"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="Description"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/variety_desc_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="DescriptionDescription"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/seed_price"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/seed_price_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="DescriptionDescription"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/yield"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/variety_yield_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="Description Description"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/maturity"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/variety_maturity_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="Description Description"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/particularity"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/variety_particularity_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="Description Description"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/favorable_zone"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:id="@+id/variety_zone_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.3"
                        android:layout_gravity="left"
                        android:text="Description Description"
                        android:textColor="#2B2A2A"
                        android:textSize="16dp"
                        android:textStyle="normal"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#D6D2D2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:text="@string/points_of_distribution"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="20dp"
                        android:layout_marginBottom="15dp"/>
                    <TableLayout
                        android:id="@+id/distribution_table"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:layout_gravity="left">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/variety_location"
                                android:textColor="#2B2A2A"
                                android:textSize="15dp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/variety_availability"
                                android:textColor="#2B2A2A"
                                android:textSize="15dp"
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/crops_drawer_menu"></android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>